# LeanTeX

./: .gitignore  LICENSE  README.md  examples.html  index.html  install.html  pyproject.toml  robots.txt  setup.py  sitemap.xml  styles.css  version1.html  version2.html  versions.html
.github/workflows/: ci.yml  static.yml
examples/minimal/: Makefile  hausdorff_before.tex  hausdorff_v25.tex  lake-manifest.json  lakefile.lean  minimal.tex  onefile.tex  project.tex  test4.tex  v25.tex
examples/minimal/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
examples/minimal/projectex/: project.tex
leantex/: __init__.py  build.py  cli.py  extractor.py  infoview.py  io_utils.py  models.py  parser.py  render.py  render_v2.py  runner.py  texinstall.py
scripts/: full_test.sh
tests/: test_cache.py  test_extractor.py  test_generated_assets.py  test_import_routing.py  test_infoview.py  test_mapping.py  test_parser.py  test_render.py  test_texinstall.py  test_v2.py  test_v25.py  test_workspace.py
tex/: leantex.sty  leantexonefile.sty  leantexv2.sty  leantexv2onefile.sty
