[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leantex"
version = "2.0.0"
description = "LeanTeX v2: embed Lean 4 code with minted syntax highlighting and infoview output in LaTeX PDFs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ryland Gross" }]
license = { text = "The Unlicense" }

[project.scripts]
leantex = "leantex.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["leantex*"]
